--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
 
-    <div class="gradient-type">
+<!--     <div class="gradient-type">
         <select>
             <option value="linear">Linear gradient</option>
             <option value="radial">Radical gradient</option>
             <option value="conic">Conic gradient</option>
         </select>
     </div>
-
+ -->
     <main>
         <h1 class="title">CSS GRADIENT GENERATOR</h1>
         <div class="gradient-box"></div>
